--- a/pom.xml
+++ b/pom.xml
@@ -28,23 +28,30 @@
       <version>2.0</version>
       <scope>provided</scope>
     </dependency>
+
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.3.2</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>dream-weixin</finalName>
+
     <plugins>
       <plugin>
         <groupId>org.mortbay.jetty</groupId>
         <artifactId>maven-jetty-plugin</artifactId>
-        <version>6.1.5</version>
+        <version>6.1.7</version>
         <configuration>
-          <webAppSourceDirectory>src/main/webapp</webAppSourceDirectory>
-          <scanIntervalSeconds>3</scanIntervalSeconds>
-          <contextPath>/weixin</contextPath>
           <connectors>
             <connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
-              <port>8088</port>
+              <port>80</port>
+              <maxIdleTime>30000</maxIdleTime>
             </connector>
           </connectors>
+          <webAppSourceDirectory>src/main/webapp</webAppSourceDirectory>
+          <contextPath>/</contextPath>
         </configuration>
       </plugin>
     </plugins>
